--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -6,11 +6,11 @@
       {
         "id": "fc3164892aa726b9",
         "type": "leaf",
-        "dimension": 72.42647058823529,
+        "dimension": 74.9770009199632,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "00 八股文集中营/基础 操作系统.md",
+            "file": "06 工具类/Git.md",
             "mode": "source",
             "source": false
           }
@@ -20,11 +20,11 @@
       {
         "id": "19b938132e7f09f3",
         "type": "leaf",
-        "dimension": 27.573529411764707,
+        "dimension": 25.0229990800368,
         "state": {
           "type": "outline",
           "state": {
-            "file": "00 八股文集中营/基础 操作系统.md"
+            "file": "06 工具类/Git.md"
           }
         },
         "group": "b4b38b2831d3cf9a"
@@ -67,7 +67,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 293
+    "width": 234
   },
   "right": {
     "id": "0e31dc5d387be3be",
@@ -83,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "00 八股文集中营/基础 操作系统.md",
+                "file": "06 工具类/Git.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -100,7 +100,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "00 八股文集中营/基础 操作系统.md"
+                "file": "06 工具类/Git.md"
               }
             }
           }
@@ -113,15 +113,15 @@
   },
   "active": "fc3164892aa726b9",
   "lastOpenFiles": [
+    "00 八股文集中营/基础 操作系统.md",
+    "00 八股文集中营/Java 基础.md",
     "00 八股文集中营/基础 计算机网络.md",
-    "00 八股文集中营/数据库 MySQL.md",
     "00 八股文集中营/基础 数据结构.md",
-    "02 编程语言/Golang Everything/并发.md",
-    "02 编程语言/Golang Everything/GoWeb Gin Gorm.md",
-    "02 编程语言/Golang Everything/垃圾回收 异常 接口 函数 方法.md",
-    "02 编程语言/Golang Everything/基础与数据类型.md",
-    "00 八股文集中营/Java 集合Collection.md",
-    "03 算法笔记/Java刷题语法整理.md",
-    "00 八股文集中营/Java 基础.md"
+    "00 八股文集中营/数据库 MySQL.md",
+    "00 八股文集中营/数据库 Redis.md",
+    "README.md",
+    "Pasted image 20220717233435.png",
+    "00 八股文集中营/Java 并发.md",
+    "00 八股文集中营/Java JVM.md"
   ]
 }
