--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -3,5 +3,6 @@
   "livePreview": true,
   "defaultViewMode": "source",
   "promptDelete": false,
-  "communityThemeSortOrder": "download"
+  "communityThemeSortOrder": "download",
+  "readableLineLength": false
 }
