--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,5 +5,6 @@
   "promptDelete": false,
   "communityThemeSortOrder": "download",
   "readableLineLength": false,
-  "attachmentFolderPath": ".//assets"
+  "attachmentFolderPath": ".//assets",
+  "strictLineBreaks": false
 }
