--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -6,11 +6,11 @@
       {
         "id": "b56feb46fe2324be",
         "type": "leaf",
-        "dimension": 74.39862542955326,
+        "dimension": 74.75247524752476,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "00 面试相关/自我介绍.md",
+            "file": "04 数据库/数据库 MySQL.md",
             "mode": "source",
             "source": false
           }
@@ -20,11 +20,11 @@
       {
         "id": "9cb6b24f3989805a",
         "type": "leaf",
-        "dimension": 25.601374570446733,
+        "dimension": 25.247524752475247,
         "state": {
           "type": "outline",
           "state": {
-            "file": "00 面试相关/自我介绍.md"
+            "file": "04 数据库/数据库 MySQL.md"
           }
         },
         "group": "cd845b150cc92b65"
@@ -67,7 +67,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 283.5
+    "width": 231.5
   },
   "right": {
     "id": "0e31dc5d387be3be",
@@ -83,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "00 面试相关/自我介绍.md",
+                "file": "04 数据库/数据库 MySQL.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -100,7 +100,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "00 面试相关/自我介绍.md"
+                "file": "04 数据库/数据库 MySQL.md"
               }
             }
           }
@@ -113,15 +113,15 @@
   },
   "active": "b56feb46fe2324be",
   "lastOpenFiles": [
+    "04 数据库/数据库 Redis.md",
+    "04 数据库/Redis.md",
+    "04 数据库/数据库 MySQL.md",
+    "02 Java/Java JVM.md",
     "06 中间件/消息队列/Kafka.md",
-    "07 工具类/Docker.md",
-    "02 Java/Java 基础.md",
+    "00 面试相关/自我介绍.md",
+    "00 面试相关/简历.pdf",
     "00 面试相关/简历.md",
-    "01 Golang/(Golang) 基础.md",
-    "00 面试相关/李凯欣 中南大学 后端.pdf",
-    "05 算法笔记/(Java)刷题语法整理.md",
-    "05 算法笔记/Golang相关/go刷题语法整理.md",
-    "01 Golang/并发.md",
-    "02 Java/Java JVM.md"
+    "02 Java/Java 集合.md",
+    "07 工具类/Docker.md"
   ]
 }
